# LiteSoundSystem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindOgg.cmake  FindOpus.cmake  ffmpeg.cmake
include/xlite/: Config.hpp  LiteSoundSystem.hpp
include/xlite/audio/: AudioDevice.hpp  AudioSource.hpp  Buffer.hpp  Source.hpp
include/xlite/oal/: Buffer.hpp  Device.hpp  Source.hpp
include/xlite/sound/: Audio.hpp  Engine.hpp  Pool.hpp
src/: OpusStreamDecoder.cpp  OpusStreamDecoder.hpp
src/audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioSource.cpp  AudioSource.hpp  Buffer.cpp  Device.cpp  Source.cpp
src/jni/: JNIAudioBuffer.cpp  JNIAudioDevice.cpp  JNIAudioSource.cpp  JNIOpusDecoder.cpp
src/oal/: Buffer.cpp  Device.cpp  Source.cpp
src/sound/: Audio.cpp  Engine.cpp  Pool.cpp
